:recycle: refactor usage of language keys